@@ -1,6 +1,8 @@
+DIST AQEMU-0.8.1-Beta2.tar.bz2 969320 RMD160 b0a52cf6eef2200a9a158ee11bcbf308e6d25626 SHA1 7a59df1aeb0021b2eebb1ce32f15f81a5a0f86cd SHA256 8a4289bcc759ea9b188a491332eafe195ad94dca9eb48ef67735c431b2995225
 DIST aqemu-0.8.0.tar.bz2 866896 RMD160 1091e84b03bdcb2c88bb6665d1b49b10c791964f SHA1 ef7e68d8520a49ea28be4ece5cb45a294aa4e9f0 SHA256 29e2e8663bb34d10888994766bb3aba3a916bbf18d2d10c189309c61e813c363
 EBUILD aqemu-0.8.0-r1.ebuild 1058 RMD160 80c4e4f1823384a477a305264a0479d4cda23a0e SHA1 e3aa3edf568ebcf7d6cbb410fdeb969681273564 SHA256 39d28fa887612e682394d02b9382a7577a6083235af8af1bdd9ac483aa3811fd
-EBUILD aqemu-0.8.0.ebuild 1054 RMD160 c5e4abdbabadcb040a9cb09c52b67391a64f87b9 SHA1 4943070715da91b5ce94cb8d2bf084fa84991712 SHA256 aee8e91cbe17b5a5f26038eb187c6c4416f0e8ea654f3f256dee6d6e9cbf5369
-EBUILD aqemu-9999.ebuild 1226 RMD160 7ade8cba6c59eb54fa33ad1f693a0e2be35fc480 SHA1 14e0e91df2b25c35e3404e33145e63dc9f5c1cfe SHA256 82d8a5cdb07a473fce42387451ffc6336ed89d958b676b2c8dccc0c957fd31c7
-MISC ChangeLog 1544 RMD160 c60ced8f8025f12eb8ce158c8d0e58b1d45b9f65 SHA1 f555957caeecd78cfaa3b2620a37cf0920f91295 SHA256 1875353f8d4b909964a5376dc9b69a299c3b14a0acb78ee9eab03da4bb9d05de
-MISC metadata.xml 519 RMD160 b15d45f5b93aca92da621e443df24680645b0e43 SHA1 89555130ff6f5c1aa2e450b6b9a615e8d7ab8efe SHA256 71595705b42664a9350844270b1d1211ff6815010ebc63168f6778f8b0247818
+EBUILD aqemu-0.8.0.ebuild 899 RMD160 09cb53de7bb0ffbd529871e0d2c0ec6ccc352e97 SHA1 16c9326bc9f20349b0b2233e4df0c3de8fc637d2 SHA256 412877728445e0edc7e1abfe047886f63b331e761e5c6c9328f05a1d47440e28
+EBUILD aqemu-0.8.1_beta2.ebuild 918 RMD160 8948b68a9a2cef830efd818a7fb54b732ba1dc57 SHA1 4e9b9a7e741ec534d2f4e844f0a771e824c18955 SHA256 469eed6fcc8d888fa1e396242fdc73eba20be0702c191f0339cdda50512382d2
+EBUILD aqemu-9999.ebuild 1076 RMD160 3a7504c24d8d21f0c06a24cb67d3121cf0764359 SHA1 6f55629ce9d05bf46226c705259541291d58823f SHA256 da3ff40e78be7909fc998a05d13c7474d9b1f48dd20e44c99e231728116c8ce7
+MISC ChangeLog 1792 RMD160 c7680a760a98f683da9bdfc8ca0bbfa36574a4eb SHA1 11bad7baa098f7779b39b6fe80a84892e2bbe951 SHA256 dfdcf626b14d289a21315025966649ad3d49f6e9d12749ee744b394daf2a52c2
+MISC metadata.xml 406 RMD160 742984a62e6ce19d458bd2f43029e778edde3065 SHA1 1a796832c71e4285279f58280c53d95bc522b3eb SHA256 1c58742577125028f59fdb7c0dd6d1e3a165f224d4dc5dca5cdb2922110c874c
