@@ -3,10 +3,8 @@
 <pkgmetadata>
 <herd>no-herd</herd>
 <maintainer>
-  <email>@gmail.com</email>
- <description>Description of the maintainership</description> 
+  <email>andreis.vinogradovs@gmail.com</email>
 </maintainer>
- <longdescription>Long description of the package</longdescription> 
 <use>
 	<flag name='kvm'>Add support kernel virtual mashine</flag>
 	<flag name='spice'>Build witch SPUCEd qemu, use
